--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,10 +6,10 @@
   display: flex;
   justify-content: space-between;
   padding: 12px;
-  background-color: black;
+  background-color: lightskyblue;
   color: white;
   padding-inline: 45px;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid lightskyblue;
 }
 .navbar-left {
   display: flex;
@@ -30,4 +30,35 @@
 }
 .navbar-link:hover {
   text-decoration: underline;
+}
+
+.home-content {
+  position: relative;
+}
+
+.student-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 70px;
+  font-weight: bold;
+  color: white;
+  text-align: center;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.student-image {
+  max-width: 100%;
+  height: auto;
+}
+
+.home-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Scale the image while preserving its aspect ratio to cover the entire container */
+}
+
+.home-content {
+  position: relative;
 }
